<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/grad_bg"
    tools:context=".fb_activity">

    <TextView
        android:id="@+id/tv_fb_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/feedback"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/pt_fb_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/pt_fb_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tv_fb_fb"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/type_your_feedback"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_fb_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/submit_feedback" />



</LinearLayout>