<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    android:orientation="vertical"
    tools:context=".rewardshomepage">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:text="@string/reward_page"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        style="?android:attr/buttonBarButtonStyle"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rewards1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/water_bottles"
            android:textColor="#ffffff"
            android:drawableTop="@drawable/reward111"
            android:background="@color/colorPrimary"
             />

        <Button
            android:id="@+id/rewards2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/patym_cashbacks"
            android:drawableTop="@drawable/rewardd222"
            android:textColor="#ffffff"
            android:background="@color/colorPrimary"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        style="?android:attr/buttonBarButtonStyle"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rewards3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimary"
            android:text="@string/smart_phones"
            android:textColor="#ffffff"
            android:drawableTop="@drawable/rewardss3"
             />

        <Button
            android:id="@+id/rewards4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimary"
            android:text="@string/movie_coupons"
            android:drawableTop="@drawable/reward44p"
            android:textColor="#ffffff"
             />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        style="?android:attr/buttonBarButtonStyle"
        android:orientation="horizontal">

        <Button
            android:id="@+id/rewards5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimary"
            android:text="@string/smart_watches"
            android:drawableTop="@drawable/reward555p"
            android:textColor="#ffffff"
             />

        <Button
            android:id="@+id/rewards6"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@color/colorPrimary"
            android:text="@string/earphones"
            android:drawableTop="@drawable/reward66p"
            android:textColor="#ffffff"
             />

    </LinearLayout>

</LinearLayout>