<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:gravity="center"
        app:srcCompat="@drawable/ic_rotglogo"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        tools:ignore="VectorDrawableCompat" />

    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="30sp"/>
        <LinearLayout
            android:id="@+id/linlay1"
            android:orientation="vertical"
            android:layout_below="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textAllCaps="true"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    tools:ignore="LabelFor,TextFields"
                    android:importantForAutofill="no" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-medium"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:background="@drawable/et_bg"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor,TextFields" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/linlay1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:text="@string/login_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </RelativeLayout>


</RelativeLayout>





